# commontalk

./: .gitignore  docker-compose.yml  init.sql  mailmap.txt  readme.md
backend/: .Dockerignore  .gitignore  Dockerfile  README.md  gunicorn.conf.py  prof.out  pyproject.toml  run.sh  run_dev.py  wsgi.py
backend/modules/data/: download.py  insert.py  scrape.py  utils.py
backend/modules/points/: embed.py  extract.py  generate.py  utils.py
backend/src/: app.py  requirements.txt  run.sh
backend/src/app/: __init__.py  logging.py
backend/src/app/api/v1/: __init__.py
backend/src/app/common/: errors.py  models.py
backend/src/app/services/job_polling/: featured_topics.py  polling.py
backend/src/app/services/search/: models.py  search.py
backend/src/common_talk_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/src/commontalk_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/modules/api/: cluster.py  featured.py
backend/src/modules/cluster/: analysis.py  cluster.py  config.py  llm_labelling.py  recursion.py  retrieve_points.py  run.py  save.py  store.py  utils.py
backend/src/modules/data/: download.py  save.py  scrape.py  utils.py
backend/src/modules/models/: cluster.py  database.py  pagination.py
backend/src/modules/points/: embed.py  extract.py  generate.py  insert.py  prompts.py  save.py  utils.py
backend/src/modules/utils/: cluster_utils.py  database_utils.py  executor_utils.py  job_utils.py  message_utils.py
backend/src/scripts/: get_points.py  other_file.ipynb  run_test.ipynb
experiments/: recursion.ipynb
(+57 files in other folders)
